--- a/vercel.json
+++ b/vercel.json
@@ -27,7 +27,7 @@
   ],
   "functions": {
     "api/**/*.ts": {
-      "runtime": "nodejs18.x",
+      "runtime": "@vercel/node@3",
       "memory": 1024,
       "maxDuration": 10
     }
