--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^4.21.2",
+    "html2canvas-pro": "^2.0.2",
     "jsonrepair": "^3.13.2",
     "lucide-react": "^0.546.0",
     "motion": "^12.23.24",
